--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_fps, X_at, y = create_data(\n",
     "    df,\n",
     "    descriptors=descriptors,\n",
-    "    apply_norm=True,\n",
+    "    apply_norm=False,\n",
     "    radius=2,\n",
     "    nbits=2048,\n",
     "    fingerprints_pca=True,\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,18 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ACC': 0.9056603773584906,\n",
-       " 'ROC-AUC': 0.9049730757047829,\n",
-       " 'R2': 0.6222679759265126}"
+       "{'ACC': 0.9245283018867925,\n",
+       " 'ROC-AUC': 0.9244535951853026,\n",
+       " 'R2': 0.69781438074121}"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,18 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ACC': 0.8176100628930818,\n",
-       " 'ROC-AUC': 0.815647766867279,\n",
-       " 'R2': 0.2697180867912575}"
+       "{'ACC': 0.8113207547169812,\n",
+       " 'ROC-AUC': 0.809946151409566,\n",
+       " 'R2': 0.24453595185302512}"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,18 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'ACC': 0.9119496855345912,\n",
-       " 'ROC-AUC': 0.9110706366803927,\n",
+       " 'ROC-AUC': 0.9114665821982895,\n",
        " 'R2': 0.647450110864745}"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +336,80 @@
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "fit_and_eval(model, X=X_combined, y=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 2.4) Catboost on [X_at, PCA(X_fps)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from catboost import CatBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CatBoostClassifier(\n",
+    "    iterations=1000,\n",
+    "    learning_rate=0.1,\n",
+    "    depth=6,\n",
+    "    loss_function='Logloss',\n",
+    "    verbose=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train, eval_set=(X_test, y_test), early_stopping_rounds=50)\n",
+    "\n",
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ACC': 0.9371069182389937,\n",
+       " 'ROC-AUC': 0.9370446626544187,\n",
+       " 'R2': 0.7481786506176751}"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_metrics(y_test, y_pred)"
    ]
   }
  ],
