tuned catboost a bit

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
     "    descriptors=descriptors,\n",
     "    apply_norm=False,\n",
     "    radius=2,\n",
-    "    nbits=2048,\n",
+    "    nbits=4096,\n",
     "    fingerprints_pca=True,\n",
     "    pca_dim=32,\n",
     ")\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        " 'R2': 0.69781438074121}"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,23 +280,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2) RandomForest on X_fingerprints with PCA"
+    "## 2.2) RandomForest on X_fps with PCA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ACC': 0.8113207547169812,\n",
-       " 'ROC-AUC': 0.809946151409566,\n",
-       " 'R2': 0.24453595185302512}"
+       "{'ACC': 0.8238993710691824,\n",
+       " 'ROC-AUC': 0.8209534368070953,\n",
+       " 'R2': 0.29490022172949004}"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,18 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ACC': 0.9119496855345912,\n",
-       " 'ROC-AUC': 0.9114665821982895,\n",
-       " 'R2': 0.647450110864745}"
+       "{'ACC': 0.9371069182389937,\n",
+       " 'ROC-AUC': 0.9374406081723156,\n",
+       " 'R2': 0.7481786506176751}"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,54 +356,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 361,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model = CatBoostClassifier(\n",
-    "    iterations=1000,\n",
-    "    learning_rate=0.1,\n",
-    "    depth=6,\n",
-    "    loss_function='Logloss',\n",
-    "    verbose=0\n",
-    ")"
+    "**Current best**:\n",
+    "```python\n",
+    "data_args = {\n",
+    "    \"descriptors\": descriptors,\n",
+    "    \"apply_norm\": False,\n",
+    "    \"radius\": 2,\n",
+    "    \"nbits\": 4096,\n",
+    "    \"fingerprints_pca\": True,\n",
+    "    \"pca_dim\": 32,\n",
+    "}\n",
+    "\n",
+    "model_args = {\n",
+    "    \"iterations\": 1000,\n",
+    "    \"learning_rate\": 0.1,\n",
+    "    \"depth\": 6,\n",
+    "    \"loss_function\": 'Logloss',\n",
+    "    \"verbose\": 0,\n",
+    "    \"random_seed\": 100\n",
+    "}\n",
+    "X = X_combined\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_args = {\n",
+    "    \"descriptors\": descriptors,\n",
+    "    \"apply_norm\": False,\n",
+    "    \"radius\": 2,\n",
+    "    \"nbits\": 4096,\n",
+    "    \"fingerprints_pca\": True,\n",
+    "    \"pca_dim\": 32,\n",
+    "}\n",
+    "\n",
+    "model_args = {\n",
+    "    \"iterations\": 1000,\n",
+    "    \"learning_rate\": 0.1,\n",
+    "    \"depth\": 6,\n",
+    "    \"loss_function\": 'Logloss',\n",
+    "    \"verbose\": 0,\n",
+    "    \"random_seed\": 100\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_fps, X_at, y = create_data(df, **data_args)\n",
+    "X_combined = np.hstack([X_fps, X_at])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, eval_set=(X_test, y_test), early_stopping_rounds=50)\n",
+    "model = CatBoostClassifier(**model_args)\n",
+    "model.fit(X_train, y_train, eval_set=(X_test, y_test))\n",
     "\n",
     "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'ACC': 0.9371069182389937,\n",
-       " 'ROC-AUC': 0.9370446626544187,\n",
+       " 'ROC-AUC': 0.936648717136522,\n",
        " 'R2': 0.7481786506176751}"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
