--- a/small_data.ipynb
+++ b/small_data.ipynb
@@ -72,13 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, r2_score, balanced_accuracy_score\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, root_mean_squared_error"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
